--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@emotion/is-prop-valid": "latest",
     "@eslint/eslintrc": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@joycostudio/v0-setup": "latest",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -45,6 +47,7 @@
     "@tanstack/react-router": "latest",
     "@types/eslint": "latest",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -58,6 +61,7 @@
     "lucide-react": "^0.454.0",
     "motion": "latest",
     "next": "16.1.6",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.4",
     "nuqs": "latest",
     "path": "latest",
@@ -70,7 +74,9 @@
     "react-router": "latest",
     "react-router-dom": "latest",
     "recharts": "2.15.0",
+    "resend": "^6.9.1",
     "sonner": "latest",
+    "stripe": "^20.3.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "thumbhash": "latest",
@@ -79,10 +85,12 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
